--- a/src/main/webapp/activity/List.xhtml
+++ b/src/main/webapp/activity/List.xhtml
@@ -50,7 +50,7 @@
                                 <h:outputText value="#{bundle.ListActivityTitle_activityDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.activityDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
