--- a/src/main/webapp/activity/View.xhtml
+++ b/src/main/webapp/activity/View.xhtml
@@ -20,7 +20,7 @@
                         <h:outputText value="#{activityController.selected.institution}" title="#{bundle.ViewActivityTitle_institution}"/>
                         <h:outputText value="#{bundle.ViewActivityLabel_activityDate}"/>
                         <h:outputText value="#{activityController.selected.activityDate}" title="#{bundle.ViewActivityTitle_activityDate}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputText>
                         <h:outputText value="#{bundle.ViewActivityLabel_studentParticipation}"/>
                         <h:outputText value="#{activityController.selected.studentParticipation}" title="#{bundle.ViewActivityTitle_studentParticipation}"/>
