--- a/src/main/webapp/returnSubmission/Edit.xhtml
+++ b/src/main/webapp/returnSubmission/Edit.xhtml
@@ -28,11 +28,11 @@
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_returnYear}" for="returnYear" />
                         <p:inputText id="returnYear" value="#{returnSubmissionController.selected.returnYear}" title="#{bundleReturns.EditReturnSubmissionTitle_returnYear}" />
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_fromDate}" for="fromDate" />
-                        <p:calendar id="fromDate" pattern="MM/dd/yyyy" value="#{returnSubmissionController.selected.fromDate}" title="#{bundleReturns.EditReturnSubmissionTitle_fromDate}"  showOn="button"/>
+                        <p:calendar id="fromDate" pattern="dd MMMM yyyy" value="#{returnSubmissionController.selected.fromDate}" title="#{bundleReturns.EditReturnSubmissionTitle_fromDate}"  showOn="button"/>
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_toDate}" for="toDate" />
-                        <p:calendar id="toDate" pattern="MM/dd/yyyy" value="#{returnSubmissionController.selected.toDate}" title="#{bundleReturns.EditReturnSubmissionTitle_toDate}"  showOn="button"/>
+                        <p:calendar id="toDate" pattern="dd MMMM yyyy" value="#{returnSubmissionController.selected.toDate}" title="#{bundleReturns.EditReturnSubmissionTitle_toDate}"  showOn="button"/>
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_sentDate}" for="sentDate" />
-                        <p:calendar id="sentDate" pattern="MM/dd/yyyy" value="#{returnSubmissionController.selected.sentDate}" title="#{bundleReturns.EditReturnSubmissionTitle_sentDate}"  showOn="button"/>
+                        <p:calendar id="sentDate" pattern="dd MMMM yyyy" value="#{returnSubmissionController.selected.sentDate}" title="#{bundleReturns.EditReturnSubmissionTitle_sentDate}"  showOn="button"/>
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_sentArea}" for="sentArea" />
                         <p:selectOneMenu id="sentArea" value="#{returnSubmissionController.selected.sentArea}" >
                             <f:selectItem itemLabel="#{bundleReturns.SelectOneMessage}"/>
@@ -62,7 +62,7 @@
                                            itemValue="#{receivedByItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_receiveDate}" for="receiveDate" />
-                        <p:calendar id="receiveDate" pattern="MM/dd/yyyy" value="#{returnSubmissionController.selected.receiveDate}" title="#{bundleReturns.EditReturnSubmissionTitle_receiveDate}"  showOn="button"/>
+                        <p:calendar id="receiveDate" pattern="dd MMMM yyyy" value="#{returnSubmissionController.selected.receiveDate}" title="#{bundleReturns.EditReturnSubmissionTitle_receiveDate}"  showOn="button"/>
                         <p:outputLabel value="#{bundleReturns.EditReturnSubmissionLabel_receiveArea}" for="receiveArea" />
                         <p:inputText id="receiveArea" value="#{returnSubmissionController.selected.receiveArea}" title="#{bundleReturns.EditReturnSubmissionTitle_receiveArea}" />
                     </p:panelGrid>
