--- a/src/main/webapp/returnSubmission/List.xhtml
+++ b/src/main/webapp/returnSubmission/List.xhtml
@@ -62,7 +62,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_fromDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.fromDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
@@ -70,7 +70,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_toDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.toDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
@@ -78,7 +78,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_sentDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.sentDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
@@ -110,7 +110,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_receiveDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.receiveDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
