--- a/src/main/webapp/returnSubmission/View.xhtml
+++ b/src/main/webapp/returnSubmission/View.xhtml
@@ -24,15 +24,15 @@
                         <h:outputText value="#{returnSubmissionController.selected.returnYear}" title="#{bundleReturns.ViewReturnSubmissionTitle_returnYear}"/>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_fromDate}"/>
                         <h:outputText value="#{returnSubmissionController.selected.fromDate}" title="#{bundleReturns.ViewReturnSubmissionTitle_fromDate}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputText>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_toDate}"/>
                         <h:outputText value="#{returnSubmissionController.selected.toDate}" title="#{bundleReturns.ViewReturnSubmissionTitle_toDate}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputText>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_sentDate}"/>
                         <h:outputText value="#{returnSubmissionController.selected.sentDate}" title="#{bundleReturns.ViewReturnSubmissionTitle_sentDate}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputText>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_sentArea}"/>
                         <h:outputText value="#{returnSubmissionController.selected.sentArea}" title="#{bundleReturns.ViewReturnSubmissionTitle_sentArea}"/>
@@ -44,7 +44,7 @@
                         <h:outputText value="#{returnSubmissionController.selected.receivedBy}" title="#{bundleReturns.ViewReturnSubmissionTitle_receivedBy}"/>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_receiveDate}"/>
                         <h:outputText value="#{returnSubmissionController.selected.receiveDate}" title="#{bundleReturns.ViewReturnSubmissionTitle_receiveDate}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputText>
                         <h:outputText value="#{bundleReturns.ViewReturnSubmissionLabel_receiveArea}"/>
                         <h:outputText value="#{returnSubmissionController.selected.receiveArea}" title="#{bundleReturns.ViewReturnSubmissionTitle_receiveArea}"/>
