--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -25,7 +25,7 @@
                         <p:submenu label="Actions">
                             <p:menuitem ajax="false" value="Submit New Return" action="#{returnSubmissionController.toSubmitNewReport()}" />
                             <p:menuitem ajax="false" value="Receive Returns" action="#{returnSubmissionController.toReceiveReturns()}" />
-                            
+                            <p:menuitem ajax="false" value="Check Returns" action="#{returnSubmissionController.toCheckReturns()}" />
                         </p:submenu>
                         <p:submenu label="#{bundle.Maintenance}">
                             <p:menuitem  ajax="false" value="Manage Areas" action="/area/add_area_index" />
