--- a/src/main/webapp/activity/Create.xhtml
+++ b/src/main/webapp/activity/Create.xhtml
@@ -23,7 +23,7 @@
                                            itemValue="#{institutionItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateActivityLabel_activityDate}" for="activityDate" />
-                        <p:calendar id="activityDate" pattern="MM/dd/yyyy" value="#{activityController.selected.activityDate}" title="#{bundle.EditActivityTitle_activityDate}"  showOn="button"/>
+                        <p:calendar id="activityDate" pattern="dd MMMM yyyy" value="#{activityController.selected.activityDate}" title="#{bundle.EditActivityTitle_activityDate}"  showOn="button"/>
                         <p:outputLabel value="#{bundle.CreateActivityLabel_studentParticipation}" for="studentParticipation" />
                         <p:inputText id="studentParticipation" value="#{activityController.selected.studentParticipation}" title="#{bundle.CreateActivityTitle_studentParticipation}" />
                         <p:outputLabel value="#{bundle.CreateActivityLabel_teacherParticpation}" for="teacherParticpation" />
