--- a/src/main/webapp/returnSubmission/receive_returns.xhtml
+++ b/src/main/webapp/returnSubmission/receive_returns.xhtml
@@ -56,7 +56,7 @@
                                 <h:outputText value="Sent Date"/>
                             </f:facet>
                             <h:outputText value="#{item.sentDate}">
-                                <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
