--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -15,7 +15,7 @@
 
     <h:body>
 
-        <p:growl id="growl" life="3000" />
+        <p:growl id="growl" life="3000" autoUpdate="true" />
 
         <p:layout fullPage="true">
             <p:layoutUnit position="north" size="80" header="School Health Information System">
