--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title><ui:insert name="title">School Health Information System</ui:insert></title>
+        <title><ui:insert name="title">MOH Return Analysis</ui:insert></title>
         <h:outputStylesheet library="css" name="jsfcrud.css"/>
         <h:outputStylesheet library="css" name="default.css"/>
         <h:outputScript library="js" name="jsfcrud.js"/>
