--- a/src/main/webapp/returnSubmission/submit_new_report_selected_full.xhtml
+++ b/src/main/webapp/returnSubmission/submit_new_report_selected_full.xhtml
@@ -62,7 +62,7 @@
 
                             <p:outputLabel value="ReturnReceiveCategory:" for="returnReceiveCategory" />
                             <p:selectOneMenu id="returnReceiveCategory" value="#{returnSubmissionController.selected.returnReceiveCategory}" >
-                                <f:selectItems value="#{enumController.areaTypes}" ></f:selectItems>
+                                <f:selectItems value="#{enumController.returnReceiveCategories}" ></f:selectItems>
                             </p:selectOneMenu>
 
 
