--- a/src/main/webapp/returnSubmission/List.xhtml
+++ b/src/main/webapp/returnSubmission/List.xhtml
@@ -48,7 +48,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_sentDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.sentDate}">
-                                <f:convertDateTime pattern="dd MMMM yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy"  timeZone="Asia/Colombo" />
                             </h:outputText>
                         </p:column>
                         <p:column>
@@ -62,7 +62,7 @@
                                 <h:outputText value="#{bundleReturns.ListReturnSubmissionTitle_receiveDate}"/>
                             </f:facet>
                             <h:outputText value="#{item.receiveDate}">
-                                <f:convertDateTime pattern="dd MMMM yyyy" />
+                                <f:convertDateTime pattern="dd MMMM yyyy"  timeZone="Asia/Colombo" />
                             </h:outputText>
                         </p:column>
                         <p:column>
