--- a/src/main/webapp/returnSubmission/submit_new_report_selected_full.xhtml
+++ b/src/main/webapp/returnSubmission/submit_new_report_selected_full.xhtml
@@ -53,11 +53,11 @@
 
 
                             <p:outputLabel value="SentDate:" for="sentDate" />
-                            <p:calendar  id="sentDate" value="#{returnSubmissionController.selected.sentDate}" title="SentDate" pattern="dd/MM/yy">
+                            <p:calendar  id="sentDate"  timeZone="Asia/Colombo" value="#{returnSubmissionController.selected.sentDate}" title="SentDate" pattern="dd/MM/yy">
                             </p:calendar>
 
                             <p:outputLabel value="ReceiveDate:" for="receiveDate" />
-                            <p:calendar  id="receiveDate" value="#{returnSubmissionController.selected.receiveDate}" title="SentDate" pattern="dd/MM/yy">
+                            <p:calendar  id="receiveDate"  timeZone="Asia/Colombo" value="#{returnSubmissionController.selected.receiveDate}" title="SentDate" pattern="dd/MM/yy">
                             </p:calendar>
 
                             <p:outputLabel value="ReturnReceiveCategory:" for="returnReceiveCategory" />
