--- a/src/main/webapp/webUser/add_new_user.xhtml
+++ b/src/main/webapp/webUser/add_new_user.xhtml
@@ -42,7 +42,7 @@
                         
                     </h:form>
                     <h:form >
-                        <p:commandButton ajax="false" value="Login" action="#{webUserController.login()}" ></p:commandButton>
+                        <p:commandButton ajax="false" value="Login" action="#{webUserController.login()}" rendered="false" ></p:commandButton>
                     </h:form>
                 </p:panel>
 
