Signed-off-by: Dr. M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,13 +9,23 @@
         <ui:composition template="./template.xhtml">
             <ui:define name="body">
                 <h:form>
-                    <p:panel header="MOH" rendered="#{webUserController.capableOfAddingPhiAreas }" >
+                    <p:panel header="MOH" rendered="#{webUserController.mohStaff }" >
                         <p:commandButton ajax="false" value="Submit New Return" action="#{returnSubmissionController.toSubmitNewReport()}" />
                         <p:commandButton ajax="false" value="Submission Status" action="#{returnSubmissionController.toCheckSubmissionStatus()}" />
                         <p:commandButton ajax="false" value="Return Formats" action="#{returnSubmissionController.listReturnFormatLastSubmissions()}" />
-
                     </p:panel>
-
+                    <p:panel header="RDHS" rendered="#{webUserController.rdhsStaff }" >
+                        <p:commandButton ajax="false" value="Receive My Returns" action="#{returnSubmissionController.toReceiveReturns()}" />
+                        <p:commandButton ajax="false" value="Check My Returns" action="#{returnSubmissionController.toCheckReturns()}" />
+                        <p:commandButton ajax="false" value="Check All Returns" action="#{returnSubmissionController.toCheckReturnsAll()}" disabled="#{!webUserController.rdhs}" />
+                    </p:panel>
+                    <p:panel header="PDHS" rendered="#{webUserController.pdhsStaff }" >
+                        <p:commandButton ajax="false" value="Check All Returns" action="#{returnSubmissionController.toCheckReturnsAll()}" />
+                    </p:panel>
+                    <p:panel header="User Details"  >
+                        <p:commandButton ajax="false" value="Edit my details" action="#{webUserController.toEditMyDetails()}" />
+                        <p:commandButton ajax="false" value="Change my password" action="#{webUserController.toEditMyPassword()}" />
+                    </p:panel>
                 </h:form>
             </ui:define>
         </ui:composition>
