Signed-off-by: pdhs <pdhs@pdhs-server>

--- a/src/main/webapp/webUser/Create.xhtml
+++ b/src/main/webapp/webUser/Create.xhtml
@@ -29,7 +29,11 @@
                                            itemValue="#{areaItem}"
                                            itemLabel="#{areaItem.name}"/>
                         </p:selectOneMenu>
+                        <p:outputLabel value="Activated"  />
+                        <p:selectBooleanCheckbox value="#{webUserController.selected.active}" ></p:selectBooleanCheckbox>
+
                     </p:panelGrid>
+
                     <p:commandButton actionListener="#{webUserController.create}" value="#{bundle.Save}" update="display,:WebUserListForm:datalist,:growl" oncomplete="handleSubmit(args,'WebUserCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="WebUserCreateDialog.hide()"/>
                 </h:panelGroup>
